--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ a:hover {
     text-decoration: none;
 }
 
+.mobile-links {
+    display: none;
+}
+
 .nav-link {
     text-decoration: none;
     font-family: sans-serif;
@@ -92,6 +96,10 @@ a:hover {
     background-position: center;
 }
 
+.mobile-photo {
+    display: none;
+}
+
 .music-section {
     padding: 3em 0;
     display: flex;
@@ -103,6 +111,23 @@ a:hover {
 
 .music-video {
     padding-bottom: 3em;
+}
+
+.music-icons {
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    column-gap: 1em;
+    padding-bottom: 2em;
+}
+
+.music-icons a:hover {
+    --webkit-filter: invert(1);
+    filter: invert(1);
+}
+
+.music-icons img {
+    width: 5em;
 }
 
 .about-section {
@@ -290,4 +315,57 @@ p strong {
     display: flex;
     flex-direction: column;
     row-gap: 1em;
+}
+
+/***** MEDIA QUERIES BELOW *****/
+@media only screen and (max-width: 768px) {
+
+    .header-links {
+        display: none;
+    }
+
+    .hero {
+        display: none;
+    }
+
+    .mobile-photo {
+        display: block;
+        background-image: linear-gradient(#2c2b30, #38373d);
+    }
+
+    .mobile-photo img {
+        width: 100vw;
+    }
+
+    .mobile-links {
+        display: flex;
+        background-color: black;
+        flex-wrap: wrap;
+        row-gap: 0.5em;
+        padding-bottom: 0.5em;
+    }
+
+    .mobile-link {
+        width: 25%;
+        text-align: center;
+        text-decoration: none;
+    }
+
+    .music-video {
+        width: 85%;
+    }
+
+    .music-video iframe {
+        aspect-ratio: 16 / 9;
+        width: 100%;
+        height: 100%;
+    }
+
+    .music-player {
+        display: none;
+    }
+
+    .about-box {
+        width: 75%;
+    }
 }
