--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ a:hover {
     font-size: 48px;
     color: white;
     text-shadow: 2px 2px 4px #000000;
+    text-align: center;
 }
 
 .section-title a {
