--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a:hover {
 }
 
 .header-logo {
-    height: 8vh;
+    height: 6vh;
 }
 
 .footer {
@@ -514,7 +514,7 @@ p strong {
         display: none;
     }
 
-    .hero .banner {
+    .banner {
         display: none;
     }
 
