--- a/style.css
+++ b/style.css
@@ -508,6 +508,10 @@ p strong {
     font-weight: 700;
 }
 
+.tour-dates {
+    padding-bottom: 2em;
+}
+
 /***** MEDIA QUERIES BELOW *****/
 @media only screen and (max-width: 768px) {
 
