--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a:link, a:visited, a:active {
 }
 
 a:hover {
-    color: #9172ae;
+    color: #fec944;
 }
 
 .font-gimlet-reg {
@@ -143,7 +143,7 @@ a:hover {
     max-height: 3.5em;
     height: 5vh;
     text-align: center;
-    background-color: #9172ae;
+    background-color: #fec944;
     opacity: 90%;
 }
 
@@ -156,11 +156,16 @@ a:hover {
 }
 
 .banner-text-anchor:hover {
-    color: black;
+    color: white;
 }
 
 #banner-text {
     font-size: 2vh;
+    color: black;
+}
+
+#banner-text:hover {
+    color: white;
 }
 
 .mobile-photo {
@@ -172,7 +177,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #38373d;
+    background-color: #2a2726;
     background-image: linear-gradient(#38373d, 2c2b30)
 }
 
@@ -246,8 +251,9 @@ a:hover {
 
 .about-box {
     margin-top: 25vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.65);
     width: 50%;
+    max-width: 2000px;
     color: white;
     padding: 1em;
     border-radius: 1em;
@@ -353,6 +359,7 @@ p strong {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
 }
 
 .press-photo-list a {
