Quick format fixes

--- a/style.css
+++ b/style.css
@@ -594,7 +594,7 @@ p strong {
     }
 
     .about-section {
-        background-image: url("img/wywcover.webp");
+        background-image: url("img/tib_bg.jpg");
     }
 
     .about-box {
