--- a/style.css
+++ b/style.css
@@ -595,7 +595,7 @@ p strong {
     }
 
     .about-section {
-        background-image: url("img/tib_bg.jpg");
+        background-image: url("img/ff_bg.png");
     }
 
     .about-box {
