--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("img//about-photo.webp");
+    background-image: url("img//live_shot.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -528,6 +528,10 @@ p strong {
 
 .tour-dates {
     padding-bottom: 2em;
+}
+
+.no-shows-img {
+    width: 100%;
 }
 
 /***** MEDIA QUERIES BELOW *****/
