--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ a:hover {
     max-height: 3.5em;
     height: 5vh;
     text-align: center;
-    background-color: #401024;
+    background-color: #498b44;
     opacity: 90%;
 }
 
